src/assets/styles/Map.css
.map-wrapper {
    margin: 1% !important;
}

.map-image-wrapper-mobile {
    background-color: none;
}

.map-mobile {
    width: 100%;
    height: auto;
    object-fit: contain;
    margin: 1% auto 0;
    display: block;
    border: 1px solid black;
}

.map {
    width: 100%;
    height: auto;
    object-fit: contain;
    margin: 0 auto;
    display: block;
    border: 1px solid black;
}

.map-title {
    font-weight: bold !important;
    color: white;
    text-align: center;
    padding: 0.5rem;
}

.map-description-title-mobile {
    text-align: left; 
    padding: 0 0 0.1rem 0.5rem;
    font-weight: bold !important;
    color: white;
}

.map-description-title {
    text-align: left; 
    padding: 0.3rem;
    font-weight: bold !important;
    color: white;
}

.color-1 {
    background-color: black;
}

.description-text-mobile {
    font-size: 0.9rem;
    color: white;
    padding: 0 1rem 0.5rem;
    margin: 0 auto 0.5rem;
    text-wrap: wrap;
    text-align: justify;
    text-justify: auto;
}

.description-text {
    font-size: 1.3rem;
    color: white;
    margin: 0.5rem 1rem;
    text-wrap: wrap;
    text-align: justify;
    text-justify: auto;
}

.bus-timetable-wrapper {
    margin: 1% !important;
}

.bus-timetable {
    border-radius: 10px;
    margin: 0.2rem auto 0.8rem;
}

